--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   db:
     image: mariadb
-    restart: always
+    restart: unless-stopped
     environment:
       MARIADB_ROOT_PASSWORD: asdf1234
     volumes:
@@ -13,7 +13,7 @@ services:
 
   adminer:
     image: adminer
-    restart: always
+    restart: unless-stopped
     ports:
       - "7070:8080"
     depends_on:
@@ -21,7 +21,7 @@ services:
 
   backend:
     image: tweetigel/backend
-    restart: always
+    restart: unless-stopped
     build:
       context: ./tweetigel-backend
     ports:
@@ -32,7 +32,7 @@ services:
 
   frontend:
     image: tweetigel/frontend
-    restart: always
+    restart: unless-stopped
     build:
       context: ./tweetigel-frontend
       args:
